--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -38,6 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          npm install
           npm run test
 
   delete-feature:
