--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -39,6 +39,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           npm install
+      - run: |
           npm run test
 
   delete-feature:
