--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -168,9 +168,9 @@ jobs:
 
       - name: Echo env vars
         run: |
-          echo "ARTIFACTS_BUCKET: ${{ env.dev.ARTIFACTS_BUCKET }}"
-          echo "CLOUDFORMATION_EXECUTION_ROLE: ${{ env.dev.CLOUDFORMATION_EXECUTION_ROLE }}"
-          echo "PIPELINE_EXECUTION_ROLE: ${{ env.dev.PIPELINE_EXECUTION_ROLE }}"
+          echo "ARTIFACTS_BUCKET: ${{ secrets.ARTIFACTS_BUCKET }}"
+          echo "CLOUDFORMATION_EXECUTION_ROLE: ${{ secrets.CLOUDFORMATION_EXECUTION_ROLE }}"
+          echo "PIPELINE_EXECUTION_ROLE: ${{ secrets.PIPELINE_EXECUTION_ROLE }}"
           echo "AWS_REGION: ${{ env.AWS_REGION }}"
 
       - name: Assume the testing pipeline user role
@@ -221,9 +221,9 @@ jobs:
 
       - name: Echo env vars
         run: |
-          echo "ARTIFACTS_BUCKET: ${{ env.ARTIFACTS_BUCKET }}"
-          echo "CLOUDFORMATION_EXECUTION_ROLE: ${{ env.CLOUDFORMATION_EXECUTION_ROLE }}"
-          echo "PIPELINE_EXECUTION_ROLE: ${{ env.PIPELINE_EXECUTION_ROLE }}"
+          echo "ARTIFACTS_BUCKET: ${{ secrets.ARTIFACTS_BUCKET }}"
+          echo "CLOUDFORMATION_EXECUTION_ROLE: ${{ secrets.CLOUDFORMATION_EXECUTION_ROLE }}"
+          echo "PIPELINE_EXECUTION_ROLE: ${{ secrets.PIPELINE_EXECUTION_ROLE }}"
           echo "AWS_REGION: ${{ env.AWS_REGION }}"
 
       - name: Assume the prod pipeline user role
